[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Alexandre Bagio <alexandre.bagio3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.11"
fastapi = {extras = ["standard"], version = "^0.116.1"}
alembic = "^1.16.4"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.3"
mypy = "^1.16.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
